Bug 364276 - InputText not getting keyboard input while placed into plasma panel.
Summary: InputText not getting keyboard input while placed into plasma panel.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.5.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL: https://paste.kde.org/pqmp5s8cb
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-13 16:05 UTC by azubieta90
Modified: 2016-06-13 17:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test Case. (770 bytes, application/gzip)
2016-06-13 16:07 UTC, azubieta90
Details

Note You need to log in before you can comment on or make changes to this bug.
Description azubieta90 2016-06-13 16:05:19 UTC
The InputText placed inside a plasmoid in the plama panel doesn't get keyboard input even with "Plasmoid.status" set to "PlasmaCore.Types.AcceptingInputStatus".

When tested in the plasmoidviewer it works well, the problem only happens when it's placed on the plasma panel.

Reproducible: Always

Steps to Reproduce:
1. Put the attached plasmoid in the plasma panel.
2. Try input some text.
Comment 1 azubieta90 2016-06-13 16:07:22 UTC
Created attachment 99479 [details]
Test Case.
Comment 2 Marco Martin 2016-06-13 17:05:02 UTC
Git commit 9ffcb3178cea8b06fdf964fd05cf28319d1ffc8b by Marco Martin.
Committed on 13/06/2016 at 17:02.
Pushed by mart into branch 'master'.

force focus to the panel on AcceptingInputStatus

when the containment (or an applet in it)
gains the state Plasma::AcceptingInputStatus
force the focus to the panel window, restoring
the behavior of Plasma4

M  +2    -0    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/9ffcb3178cea8b06fdf964fd05cf28319d1ffc8b