force focus to the panel on AcceptingInputStatus

when the containment (or an applet in it)
gains the state Plasma::AcceptingInputStatus
force the focus to the panel window, restoring
the behavior of Plasma4

BUG: 364276